--- a/style.css
+++ b/style.css
@@ -107,3 +107,21 @@
     align-items: center;
     width:115px;
   }
+  .services-container>.card-wrapper{
+    width: 100%;
+    max-width: 320px;
+  }
+  .services-container{
+    display: flex;
+    flex-direction: row;
+    width: max-content;
+    gap:10px;
+  }
+  .horizontal-scoll{
+    width: 100%;
+    overflow-x: scroll;
+    scrollbar-color: transparent transparent;
+  }
+  .horizontal-scoll::-webkit-scrollbar{
+    display: none;
+  }
