--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@
   }
   .horizontal-scoll{
     width: 100%;
+    height: 320px;
     overflow-x: scroll;
     scrollbar-color: transparent transparent;
   }
